--- a/stock.html
+++ b/stock.html
@@ -109,25 +109,34 @@
         reader.onload = (ev) => {
           const lines = ev.target.result.split("\n");
 
-const productos = lines.map(line => {
-  // Busca cualquier línea que tenga ":" en vez de solo "- Luli:"
-  const idx = line.indexOf(":");
-  if (idx !== -1) {
-    const datos = line.substring(idx + 1).trim();
-    const parts = datos.split(",");
-    if (parts.length >= 4) { // más tolerante
-      return {
-        nombre: parts[0].trim(),
-        color: parts[1]?.trim() || "",
-        precio: Number(parts[2]) || 0,
-        stock: Number(parts[3]) || 0,
-        fecha: parts[4]?.trim() || new Date().toISOString(),
-        categoria: parts[5]?.trim() || ""
-      };
-    }
-  }
-  return null;
-}).filter(p => p !== null);
+          const productos = lines.map(line => {
+            // 1. Eliminar fecha y hora inicial
+            line = line.replace(/^\d{1,2}\/\d{1,2}\/\d{4},\s*\d{1,2}:\d{2}\s*-\s*/, "");
+
+            // 2. Eliminar contacto (todo hasta el primer ":")
+            const idx = line.indexOf(":");
+            if (idx !== -1) {
+              line = line.substring(idx + 1).trim();
+            }
+
+            // 3. Eliminar texto de edición
+            line = line.replace(/<Se editó.*?>/i, "").trim();
+
+            // 4. Separar por comas
+            const parts = line.split(",");
+            if (parts.length >= 6) {
+              return {
+                nombre: parts[0].trim(),
+                color: parts[1].trim(),
+                precio: Number(parts[2]),
+                stock: Number(parts[3]),
+                fecha: parts[4].trim(),
+                categoria: parts[5].trim()
+              };
+            }
+            return null;
+          }).filter(p => p !== null);
+
           subirProductos(productos);
         };
         reader.readAsText(file);
