--- a/stock.html
+++ b/stock.html
@@ -235,3 +235,4 @@ document.getElementById("buscador").addEventListener("input", async (e) => {
     resultados.innerHTML = "<li>No se encontraron coincidencias</li>";
   }
 });
+</script>
